[package]
name = "blockified"
version = "0.1.0"
edition = "2021"
authors = ["TrippleAWap <https://github.com/TrippleAWap>"]
# This version is incomplete and is not ready for use!

[dependencies]
rust-raknet = { path="./libs/rust-raknet" }
tokio = {version = "1.17.0", features = ["full"]}
getopts = "0.2"
once_cell = "1.19.0"
flate2 = "1.0"
aes = "0.7"
block-modes = "0.8"
sha2 = "0.9"